feat: add google fonts check badge

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "version": "1.0.0",
     "description": "Detects and displays all font combinations found on a webpage",
     "permissions": ["activeTab", "scripting", "sidePanel"],
+    "host_permissions": ["https://font-system-detector-36829541347.asia-southeast3.run.app/*"],
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
